<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Login_reset_password">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/shape_ac_login_edt_back_r"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/reset_pwd_new_pwd_hint"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/activity_reset_pwd_first_edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/reset_pwd_hint"
            android:inputType="number"
            android:maxLength="11"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/ac_login_edt_hint_color"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/shape_ac_login_edt_back_r"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/confirm_pwd_hint"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/activity_rest_pwd_again_edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_pwd_again_hint"
            android:inputType="number"
            android:maxLength="11"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/ac_login_edt_hint_color"
            android:textSize="15sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_ac_login_edt_back_r"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="验 证 码："
            android:textColor="@color/black"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/login_code_hint_edt_str"
                android:maxLength="11"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/ac_login_edt_hint_color" />


        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/activity_reset_pwd_confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/shape_ac_login_btn_back_fill"
        android:text="确认修改"
        android:textColor="@color/ac_login_btn_text_color"
        android:textSize="18sp" />




</LinearLayout>