<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/shape_ac_login_edt_back_r"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/ac_register_phone_tv_str"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/activity_retrieve_phone_edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/ac_login_phone_edt_hint_str"
            android:inputType="number"
            android:maxLength="11"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/ac_login_edt_hint_color"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_ac_login_edt_back_r"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="验 证 码："
            android:textColor="@color/black"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/activity_retrieve_verification_code_edt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/login_code_hint_edt_str"
                android:maxLength="11"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/ac_login_edt_hint_color" />

            <Button
                android:id="@+id/activity_retrieve_send_code_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:background="@drawable/selector_ac_register_btn_state"
                android:text="获取验证码"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/activity_register_commit_btn_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/shape_ac_login_btn_back_fill"
        android:text="下一步"
        android:textColor="@color/ac_login_btn_text_color"
        android:textSize="18sp" />
</LinearLayout>
